# cardiac

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CardiacSegmentation/: CMakeLists.txt  CardiacSegmentation.py
CardiacSegmentation/Resources/Icons/: trash.xpm
CardiacSegmentation/src/: AISeg_config.py  dependencies.py  settings.py
CardiacSegmentation/src/models/: architecture.py  custom_objects.py
CardiacSegmentation/src/utils/: images.py  measures.py
CardiacStrain/: CMakeLists.txt  CardiacStrain.py
CardiacStrain/Logic/: CardiacStrainLogic.py
CardiacStrain/Resources/UI/: CardiacStrain.ui  Installation.ui  SegSelector.ui
CardiacStrain/Widget/: CardiacStrainWidget.py
ExampleSequence/: v4_cSAX_time_1.mhd  v4_cSAX_time_1.zraw  v4_cSAX_time_10.mhd  v4_cSAX_time_10.zraw  v4_cSAX_time_11.mhd  v4_cSAX_time_11.zraw  v4_cSAX_time_12.mhd  v4_cSAX_time_12.zraw  v4_cSAX_time_13.mhd  v4_cSAX_time_13.zraw  v4_cSAX_time_14.mhd  v4_cSAX_time_14.zraw  v4_cSAX_time_15.mhd  v4_cSAX_time_15.zraw  v4_cSAX_time_16.mhd  v4_cSAX_time_16.zraw  v4_cSAX_time_17.mhd  v4_cSAX_time_17.zraw  v4_cSAX_time_18.mhd  v4_cSAX_time_18.zraw  v4_cSAX_time_19.mhd  v4_cSAX_time_19.zraw  v4_cSAX_time_2.mhd  v4_cSAX_time_2.zraw  v4_cSAX_time_20.mhd  v4_cSAX_time_20.zraw  v4_cSAX_time_21.mhd  v4_cSAX_time_21.zraw  v4_cSAX_time_22.mhd  v4_cSAX_time_22.zraw  v4_cSAX_time_23.mhd  v4_cSAX_time_23.zraw  v4_cSAX_time_24.mhd  v4_cSAX_time_24.zraw  v4_cSAX_time_25.mhd  v4_cSAX_time_25.zraw  v4_cSAX_time_26.mhd  v4_cSAX_time_26.zraw  v4_cSAX_time_27.mhd  v4_cSAX_time_27.zraw  (+20 more)
